# protean-service

./: Cargo.toml  README.md  layout.kdl  pre-commit
.github/workflows/: rust.yaml  rust.yml
.helix/: languages.toml
alonzo/: Cargo.toml
alonzo/src/: compute.rs  lib.rs  main.rs  math.rs
guro/: Cargo.toml  README.md  rust-memory.ipynb
khadga/: Cargo.toml
khadga/src/: auth.rs  chat.rs  config.rs  data.rs  main.rs  message.rs  state.rs
khadga/src/jwt/: jwt.rs
khadga/tests/: test-db.rs
kubernetes/: README.md
kubernetes/docker/: docker-compose.yaml
kubernetes/k8s/: es-deploy.yaml
notebooks/: advanced-types.ipynb  cookbook.ipynb  early-adopter.ipynb  organization.ipynb  thinking-in-rust.ipynb
protean/: .gitignore  Cargo.toml  README.md
protean/docs/: book.toml  combat.md  data.md  why-retro.md
protean/src/: character.rs
protean/src/engine/: mod.rs  probability.rs  tasks.rs
retro/: Cargo.toml  README.md
retro/docs/: ROADMAP.md  book.toml  combat.md  combat_design.md  combat_rules.md  data.md  rules.md  why-retro.md
retro/src/: character.rs  characteristics.rs  equipment.rs  lib.rs  tasks.rs
retro/src/bins/: roller.rs
retro/src/character/: attributes.rs  build.rs  character.rs  characteristics.rs  lifepath.rs  mod.rs  psyche.rs  skills.rs  world.rs
retro/src/combat/: mod.rs
retro/src/data/: character_example.yml
retro/src/engine/: actions.rs  mod.rs  probability.rs  tasks.rs
retro/src/io/: mod.rs  traits.rs
retro/src/tasks/: mod.rs  probability.rs  tasks.rs
retro/story/: book.toml
retro/story/src/: preface.md
scripts/: config.toml  dev-env.nu  dev-env.sh  install-nushell  install-nushell.sh  pre-commit  pre-push  rename.nu  starship.nu
