[workspace]

members = [
  "protean",
  "guro"
]

exclude = [
  "kubernetes"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sean Toner <plaveoftheway@gmail.com>"]
rust-version = "1.64"
description = "Virtual Table Top RPG service and modular game engine"
edition = "2021"


[workspace.dependencies]
bevy = { version = "0.9", features = ["bevy_ui"] }
serde =  { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
num-traits = "0.2"
wgpu = "0.15"