[package]
authors = ["Sean Toner"]
edition = "2018"
name = "khadga"
version = "0.2.0"

[dependencies]
config = "0.11.0"
env_logger = "0.9.0"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde_json = "1.0.73"
juniper = "0.15.7"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.reqwest]
features = ["json"]
version = "0.11.6"

[dependencies.serde]
features = ["derive"]
version = "1.0.115"

[dependencies.tokio]
features = ["macros", "rt-threaded"]
version = "1.13.0"

[dependencies.warp]
features = ["tls"]
version = "0.3.1"
