[package]
name = "retro"
version = "0.1.0"
authors = ["Sean Toner <placeoftheway@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
serde_yaml = "0.9"
rand = "0.8"
num-traits = "0.2"
wgpu = "0.14"

[dependencies.serde]
features = ["derive"]
version = "1.0"
