[package]
name = "retro"
version = "0.1.0"
authors = ["Sean Toner <placeoftheway@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }