[package]
name = "retro"
version = "0.1.0"
authors = ["Sean Toner <placeoftheway@gmail.com>"]
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0"


[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }